--- a/frontend1/src/components/allcourses/courses.css
+++ b/frontend1/src/components/allcourses/courses.css
@@ -114,4 +114,8 @@
 }
 /*-------------online---------*/
 @media screen and (max-width: 768px) {
+  .grid2{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
