--- a/frontend1/src/App.css
+++ b/frontend1/src/App.css
@@ -86,18 +86,18 @@ p {
 }
 
 .back {
-  background-image: url("../public/images/back.webp");
+  /* background-image: url("../public/images/back.webp");
   background-size: cover;
   background-attachment: fixed;
-  position: absolute;
+  position: absolute; */
   top: 0;
   left: 0;
-  z-index: -1;
+  /* z-index: -1; */
   width: 100%;
-  height: 100vh;
-  padding-top: 30%;
+  /* height: 100vh; */
+  /* padding-top: 30%; */
   padding-right: 50px;
-  color: #fff;
+  /* color: #fff; */
   text-align: center;
 }
 .back h1 {
@@ -152,7 +152,7 @@ p {
   .grid2,
   .grid3,
   .grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .back {
     background-position: center;
