--- a/frontend1/src/components/home/hero/Hero.css
+++ b/frontend1/src/components/home/hero/Hero.css
@@ -1,16 +1,16 @@
 .hero {
-  background-image: url("../../../../public/images/bg.webp");
+  /* background-image: url("../../../../public/images/bg.webp");
   background-size: cover;
-  background-attachment: fixed;
-  position: absolute;
+  background-attachment: fixed; */
+  /* position: absolute; */
   top: 0;
   left: 0;
-  z-index: -1;
+  /* z-index: -1; */
   width: 100%;
-  height: 100vh;
-  padding-top: 20%;
+  /* height: 100vh; */
+  /* padding-top: 20%; */
   padding-right: 50px;
-  color: #fff;
+  /* color: #fff; */
 }
 .hero #heading h3 {
   color: #fff;
@@ -22,12 +22,12 @@
 }
 @media screen and (max-width: 768px) {
   .margin {
-    height: 40vh;
+    /* height: 40vh; */
   }
   .hero {
     background-position: right;
-    padding-top: 50%;
-    height: 80vh;
+    /* padding-top: 50%; */
+    /* height: 80vh; */
   }
   .hero .row {
     width: 100%;
